playground/notas_tests/valid/inf-01.hulk
let x:Number = 3, y = 4 in print(x + y);
