playground/notas_tests/invalid/r2-06.hulk
let outer = 1 in function f() => outer + 1 in f();
